Rewrite GUI using JavaFX